welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value biscuits
while(2* biscuits != caseOrange + 1 ){
         ^RunHalf:8: error: not found: value biscuits
  if(estSurBiscuit) { biscuits = biscuits + 1;}
                      ^RunHalf:9: error: not found: value caseOrange
  if(estSurOrange) { caseOrange = caseOrange + 1; }
                     ^