welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {


while(2* biscuits != caseOrange + 1 ){

  avance();
  if(estSurBiscuit) { biscuits = biscuits + 1;}
  if(estSurOrange) { caseOrange = caseOrange + 1; }



	
	
}











	
}